--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,19 +1,29 @@
 version: 2
 updates:
-  # Enable version updates for GitHub Actions
-  - package-ecosystem: "github-actions"
-    # Look for `.github/workflows` in the root directory
-    directory: "/.github/workflows"
-    # Check for updates daily
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "daily"
-    # Assign pull requests to their original authors
-    assignees:
-      - "${{github.actor}}"
-  # Enable version updates for npm
-  - package-ecosystem: "npm"
-    directory: "/"
+      interval: weekly
+    groups:
+      actions-minor:
+        update-types:
+          - minor
+          - patch
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: "daily"
-    assignees:
-      - "${{github.actor}}"
+      interval: weekly
+    ignore:
+      - dependency-name: '@types/node'
+        update-types:
+          - 'version-update:semver-major'
+    groups:
+      npm-development:
+        dependency-type: development
+        update-types:
+          - minor
+          - patch
+      npm-production:
+        dependency-type: production
+        update-types:
+          - patch
