--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "terraform-module-gcs-publisher",
   "version": "1.0.0",
   "description": "GitHub Action to push and maintain Terraform modules with versioning in GCS buckets",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "build": "ncc build src/index.js -o dist --source-map",
+    "build": "tsc && ncc build src/main.ts -o dist --source-map --minify",
     "test": "jest",
-    "lint": "eslint '**/*.js'",
-    "format": "prettier --write '**/*.js'",
+    "lint": "eslint '**/*.ts'",
+    "format": "prettier --write '**/*.ts'",
     "prepare": "husky install",
     "all": "npm run lint && npm run format && npm run build"
   },
@@ -33,10 +33,17 @@
     "semver": "7.7.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.11",
+    "@types/semver": "^7.5.8",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
     "@vercel/ncc": "0.36.1",
     "eslint": "8.47.0",
     "husky": "8.0.3",
     "jest": "29.6.3",
-    "prettier": "3.0.2"
+    "prettier": "3.0.2",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2"
   }
 }
