--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   ],
   "author": "Infraspec",
   "license": "MIT",
+  "engines": {
+    "node": ">=23.0.0"
+  },
   "dependencies": {
     "@actions/core": "1.11.1",
     "@actions/exec": "1.1.1",
@@ -39,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
     "@vercel/ncc": "0.36.1",
-    "eslint": "8.47.0",
+    "eslint": "^8.57.0",
     "husky": "8.0.3",
     "jest": "29.6.3",
     "prettier": "3.0.2",
