--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "lint": "eslint '**/*.ts'",
     "format": "prettier --write '**/*.ts'",
-    "prepare": "husky install",
+    "prepare": "husky",
     "all": "npm run lint && npm run format && npm run build"
   },
   "repository": {
@@ -36,17 +36,17 @@
     "semver": "7.7.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.11",
-    "@types/semver": "^7.5.8",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0",
-    "@vercel/ncc": "0.36.1",
-    "eslint": "^8.57.0",
-    "husky": "8.0.3",
-    "jest": "29.6.3",
-    "prettier": "3.0.2",
-    "ts-jest": "^29.2.6",
-    "typescript": "^5.8.2"
+    "@types/jest": "29.5.14",
+    "@types/node": "22.13.11",
+    "@types/semver": "7.5.8",
+    "@typescript-eslint/eslint-plugin": "8.27.0",
+    "@typescript-eslint/parser": "8.27.0",
+    "@vercel/ncc": "0.38.3",
+    "eslint": "9.23.0",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "prettier": "3.5.3",
+    "ts-jest": "29.2.6",
+    "typescript": "5.8.2"
   }
 }
