--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "tsc && ncc build src/main.ts -o dist --source-map --minify",
     "test": "jest",
     "lint": "eslint '**/*.ts'",
-    "format": "prettier --write '**/*.ts'",
+    "lint:yaml": "yamllint -c .yamllint.yml '.github/**/*.yml' 'action.yml'",
+    "lint:md": "markdownlint '**/*.md' --ignore node_modules",
+    "format": "prettier --write '**/*.{ts,js,json,md,yml,yaml}'",
+    "check": "prettier --check '**/*.{ts,js,json,md,yml,yaml}'",
+    "security": "npm audit",
     "prepare": "husky",
-    "all": "npm run lint && npm run format && npm run build"
+    "verify": "npm run lint && npm run check && npm test",
+    "all": "npm run verify && npm run build"
   },
   "repository": {
     "type": "git",
@@ -36,6 +41,7 @@
     "semver": "7.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.11",
     "@types/semver": "7.5.8",
@@ -43,9 +49,12 @@
     "@typescript-eslint/parser": "8.27.0",
     "@vercel/ncc": "0.38.3",
     "eslint": "9.23.0",
+    "globals": "^16.0.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
-    "prettier": "3.5.3",
+    "js-yaml": "^4.1.0",
+    "markdownlint-cli": "^0.44.0",
+    "prettier": "^3.5.3",
     "ts-jest": "29.2.6",
     "typescript": "5.8.2"
   }
